# functor

./: Cargo.toml  README.md
src/: curve.rs  lib.rs  main.rs
src/gui/: curve_view.rs  icon.rs  list.rs  mod.rs
